--- a/public/blog-home.html
+++ b/public/blog-home.html
@@ -27,7 +27,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+          <a class="navbar-brand" href="index.html">Alfa01</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -47,17 +47,17 @@
         <div class="col-lg-8">
         
           <!-- blog entry -->
-          <h1><a href="#">A Blog Home Template for Bootstrap 3</a></h1>
-          <p class="lead">by <a href="index.html">Start Bootstrap</a></p>
+          <h1><a href="#">Create a Responsive Website Using HTML5 and CSS3</a></h1>
+          <p class="lead">by <a href="index.html">John doe</a></p>
           <hr>
           <p><span class="glyphicon glyphicon-time"></span> Posted on August 28, 2013 at 10:00 PM</p>
           <hr>
 
             <div>
-              <iframe width="560" height="315" src="//www.youtube.com/embed/eOG90Q8EfRo" frameborder="0" allowfullscreen></iframe>
+              <iframe width="720" height="400" src="//www.youtube.com/embed/eOG90Q8EfRo" frameborder="0" allowfullscreen></iframe>
             </div>
           <hr>
-          <p>This is a very basic starter template for a blog homepage. It makes use of Glyphicons that are built into Bootstrap 3, and it makes use of the Pager at the bottom of the page. Make sure you get the Glyphicons files by downloading the entire <code>/fonts</code> directory that you can download in the source files or at <a href="http://getbootstrap.com">getbootstrap.com</a>. That directory has all of the web fonts in it which makes Glyphicons work.</p>
+          <p></p>
           <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
                     
           <hr>
@@ -79,9 +79,9 @@
               <div class="row">
                 <div class="col-lg-6">
                   <ul class="list-unstyled">
-                    <li><a href="#dinosaurs">Dinosaurs</a></li>
-                    <li><a href="#spaceships">Spaceship</a>s</li>
-                    <li><a href="#fried-foods">Fried Foods</a></li>
+                    <li><a href="#dinosaurs">JAVA</a></li>
+                    <li><a href="#spaceships">Cook</a></li>
+                    <li><a href="#fried-foods">Math</a></li>
                     <li><a href="#wild-animals">Wild Animals</a></li>
                   </ul>
                 </div>
@@ -97,7 +97,7 @@
           </div><!-- /well -->
           <div class="well">
             <h4>Side Widget Well</h4>
-            <p>Bootstrap's default well's work great for side widgets! What is a widget anyways...?</p>
+            <p>asdasd</p>
           </div><!-- /well -->
         </div>
       </div>
